--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
           echo Doing some deploy here
           ./randomaction.sh
       - name: Notifications
-        if: steps.build.conclusion == 'failure' || steps.tests.conclusion =='failure' || steps.publish.conclusion == 'failure' || steps.deploy.conclusion = 'failure'
+        if: ${{ steps.build.conclusion == 'failure' || steps.tests.conclusion =='failure' || steps.publish.conclusion == 'failure' || steps.deploy.conclusion = 'failure' }}
         run: echo Notifying admins on fail
