--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,10 @@ jobs:
         if: failure()
         env:
           PAGERDUTY_TOKEN: ${{ secrets.PAGERDUTY_TOKEN }}
-        run: curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/vnd.pagerduty+json;version=2' --header 'From: <veron.blg@gmail.com>' --header "Authorization: Token token=$PAGERDUTY_TOKEN" -d '{"incident": {"type": "incident", "title": "Build failed", "service": {"id": "PC91CFF", "type": "service_reference"} } }' 'https://api.pagerduty.com/incidents'
+        run: |
+          curl -X POST --header 'Content-Type: application/json' \
+            --header 'Accept: application/vnd.pagerduty+json;version=2' \
+            --header 'From: <veron.blg@gmail.com>' \
+            --header "Authorization: Token token=${{ secrets.PAGERDUTY_TOKEN }}" \
+            -d '{"incident": {"type": "incident", "title": "Build failed", "service": {"id": "${{ secrets.PAGERDUTY_SERVICE }}", "type": "service_reference"} } }' \
+            https://api.pagerduty.com/incidents
