--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           curl -X POST --header 'Content-Type: application/json' \
             --header 'Accept: application/vnd.pagerduty+json;version=2' \
-            --header 'From: veron.blg@gmail.com' \
+            --header 'From: vadim.savinov@zoop.net' \
             --header "Authorization: Token token=${{ secrets.PAGERDUTY_TOKEN }}" \
             -d '{"incident": {"type": "incident", "title": "Build failed", "service": {"id": "${{ secrets.PAGERDUTY_SERVICE }}", "type": "service_reference"} } }' \
             https://api.pagerduty.com/incidents
